# gametracker

./: .gitignore  README.md  lvgl-target.json
common/: README.md  common_sources.cmake
common/app/: app_counter.c  app_counter.h  app_generated.c  app_generated.h  app_runtime.c  app_runtime.h
common/hal/: hal_buttons.h  hal_event.h  hal_jumper.h
common/logic/: logic_engine.c  logic_engine.h  rules_loader.c  rules_loader.h
common/rules/: rules.json
common/ui/: ui.h  ui_counter.c  ui_counter.h  ui_demo.c  ui_port.h
common/ui_generated/: README.md  img_vault_boy_alive.c  img_vault_boy_dead.c  ui.c  ui.h  ui_events.c  ui_events.h  ui_logic.c  ui_logic.h
components/display/display_v1/: display_v1_pinout.txt
docs/: demo.md  game_data_format.md  research.md
docs/game_model/: character_instance.example.json  character_instance.schema.json  character_model.example.json  character_model.schema.json  game_engine.md  recipe_instance.armor.example.json  recipe_instance.example.json  recipe_instance.schema.json
docs/old_system/: FT3_armors.sc  FT3_doctor_drugs.sc  FT3_preparates_converted.sc  FT3_speeches_converted.sc  Metalife_Fallout_description_vB5(15).docx  Metalife_Fallout_description_vB6_uF2.odt  anomalies_FT3.txt  bazooka_a2.ino  lazergun_a1.ino  mega_nfc_uF3_tagwriter.ino  ml-ev5.h  pda_8266_b8-1.ino  personage_template.txt  piezo_monster_target_wemos_type2.ino  piezo_universal_target_wemos_type3.ino  preparates.md  scanomaly_wemos_a3_ledshield.ino  testing.sc  Препараты.xlsx
editor/: .gitignore  CHANGELOG.md  FORK.md  README.md  UPSTREAM-README.md  gametracker-editor-start.ps1  index.html  lvgl-editor-start.ps1  package-lock.json  package.json  tsconfig.node.json  vite-plugin-compile.ts  vite.config.ts
editor/.github/workflows/: deploy-pages.yml
editor/block-factory/: README.md  package-lock.json  package.json  start.ps1  webpack.config.js
editor/block-factory/src/: index.css  index.html
editor/blockly/: README.md  app.js  blocks.js  export.js  index.html  package-lock.json  package.json  server.js  start.cmd  start.ps1  style.css
editor/docs/: canvas-performance.md  font-integration.md
editor/docs/components/: README.md  arc.md  bar.md  btn.md  calendar.md  chart.md  checkbox.md  dropdown.md  img.md  label.md  line.md  obj.md  slider.md  spinner.md  switch.md  table.md  tabview.md  textarea.md  tileview.md  win.md
editor/public/lvgl-wasi/: lv_conf.h  lvgl-headers.json
editor/public/wasm/: lvgl_wasm.html  lvgl_wasm.js  lvgl_wasm.wasm
editor/scripts/: README.md  apply-en-ui.mjs  build-en-translations.mjs  build-gametracker-demo.mjs  en-ui-translations.json  export-gametracker-demo.test.ts  rebuild-simulator.test.ts
editor/src/: App.css  App.tsx  index.css
editor/src/codegen/: generator.ts  index.ts  types.ts
editor/src/codegen/__tests__/: cFormatter.test.ts  compile.test.ts  generator.test.ts  helpers.ts  logic-timer-counter.test.ts  nameUtils.test.ts  ui.c.test.ts  ui.h.test.ts  ui_events.c.test.ts  ui_events.h.test.ts  ui_logic.c.test.ts  ui_logic.h.test.ts
editor/src/codegen/formatters/: cFormatter.ts
editor/src/codegen/templates/: ui.c.ts  ui.h.ts  ui_events.c.ts  ui_events.h.ts  ui_logic.c.ts  ui_logic.h.ts
editor/src/codegen/utils/: nameUtils.ts
editor/src/hooks/: useKeyboardShortcuts.ts
editor/src/resources/: FontManager.css  FontManager.tsx  IconLibrary.css  IconLibrary.tsx  ImageManager.css  ImageManager.tsx  ResourcePanel.css  ResourcePanel.tsx  index.ts  projectManager.ts  resourceStore.ts  types.ts
editor/src/store/: appStore.ts  editorStore.ts  projectStore.ts  themeStore.ts
editor/src/types/: index.ts
editor/src/utils/: componentDefinitions.ts  componentVisibility.ts
editor/wasm/: CMakeLists.txt  build.sh  build_lvgl_lib.sh  hal_buttons_wasm.c  lv_conf.h  shell.html
editor/wasm/src/: main.c  ui_from_json.c  ui_from_json.h
engine/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
engine/src/: main.ts  types.ts
engine/src/core/: conditions.ts  effects.ts  engine.test.ts  engine.ts  expressions.ts
engine/src/ui/: app.ts  styles.css
examples/: GameTracker Demo.lvgl.json  README.md  logic-timer-counter.lvgl.json
examples/fallout_demo/: README.md  character.json  recipes.json
firmware/: CMakeLists.txt  README.md  activate-idf.ps1  build.ps1  flash.ps1  monitor.ps1  sdkconfig.defaults
firmware/docs/: display_bringup.md
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
firmware/main/hal/: hal_display.h  hal_display_hw_test.c  hal_display_internal.h  hal_display_st7789.c  hal_pins.h
firmware/main/platform/: hal_buttons_esp.c  hal_input_esp.c  hal_jumper_gpio.c  hal_jumper_poll_stub.c  ui_port_esp.c
firmware/main/rules/: rules_embed.c  rules_embed.h
firmware/main/ui/: ui_test_square.c
research/display_test/.metadata/: version.ini
scripts/: setup-emsdk.ps1  setup-esp-idf.ps1
simulator/: CMakeLists.txt  README.md  activate-build.ps1  build.ps1  lv_conf.h  lv_drv_conf.h  main.c
simulator/platform/: hal_buttons_sdl.c  hal_jumper_sdl.c  hal_sdl.c  hal_sdl.h  platform_sdl.c
(+105 files in other folders)
